--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Site
 title: My Blog
-subtitle: "虽不能至，心向往之"
+subtitle: "Imagination is more important than knowledge"
 description:
 author: xjh021
 email:
@@ -48,9 +48,9 @@ tag_map:
 ## 2: Enable pagination
 ## 1: Disable pagination
 ## 0: Fully Disable
-archive: 2
-category: 2
-tag: 2
+archive: 1
+category: 1
+tag: 1
 
 # Server
 ## Hexo uses Connect as a server
@@ -70,7 +70,7 @@ time_format: H:mm:ss
 
 # Pagination
 ## Set per_page to 0 to disable pagination
-per_page: 10
+per_page: 5
 pagination_dir: page
 
 # Disqus
@@ -80,7 +80,11 @@ disqus_shortname:
 ## Plugins: https://github.com/hexojs/hexo/wiki/Plugins
 ## Themes: https://github.com/hexojs/hexo/wiki/Themes
 theme: freemind
+#theme: wixo
 exclude_generator:
+Plugins:
+- hexo-generator-feed
+- hexo-generator-sitemap
 
 # Mathjax
 mathjax: true
